--- a/fylo-dark-theme-landing-page-master/style.css
+++ b/fylo-dark-theme-landing-page-master/style.css
@@ -19,9 +19,11 @@
 
 
 @import url(nav.css);
+@import url(footer.css);
 
 
 body{
+    
     font-size: 14px;
     font-family: 'Raleway', sans-serif;
     background-color: hsl(218, 28%, 13%);
@@ -54,24 +56,24 @@ a{
     border-radius: 30px;
     color:hsl(0, 0%, 100%) ;
 }
+#email{
+    
+    padding: 10px 60px;
+    background-color: white;
+    border-radius: 30px;
+    color:hsl(0, 0%, 100%) ;
+}
+
 .hero{
     max-height: 25px;
     max-width: 25px;
     border-radius: 50%;
 }
 
-nav{
-    display: flex;
-    justify-content: space-between;
-    ul{
-        margin-left: 50px;
-        margin-top:100px;
-    }
-    
-}
+
 
 .main{
-    margin:50px auto ;
+    margin:50px 20px ;
     #h1{
         width: 50%;
         margin: 20px auto;
@@ -86,7 +88,7 @@ nav{
 
 .main3{
     display: inline-block;
-    margin:100px auto ;
+    margin:100px 20px ;
    
 
     .div2{
@@ -99,11 +101,14 @@ nav{
             max-width: 90%;
     }   
 }
-
+.grid{
+    margin: 0 20px;
+}
 
 
 .test{
     text-align: left;
+    margin: 0 20px;
 
     .test1,.test2,.test3{
         padding: 20px 20px;
@@ -115,55 +120,85 @@ nav{
     }
     .avatar{
         display: flex;
+        gap: 15px;
+        margin: 20px auto;
+        .text{
+            margin-top: -5px;
+            line-height: 1.5;
+            .t1{
+                font-weight: bold;
+            }
+            .t2{
+                font-size: 10px;
+                color: lightgray;
+            }
+        }
     }
-    #text{
-        margin-top: -40px;
-        margin-left: 35px;
-        .t2{
-            margin-top: -12px;
-            opacity: 50%;
-            font-size: 10px;
+}
+
+
+     .sec4{
+        margin: 0 20px;
+        background-color:  hsl(217, 28%, 15%);
+        border-radius: 10px;        
+    }
+
+
+
+/* for mobile screens */
+@media screen and (max-width: 768px) {
+    body{
+    }
+    .ill{
+        width: 80vw;
+    }
+    
+    .main{
+        #h1{
+            width: 100%;
         }
+        #p{
+            width: 100%;
+        }
+    }
+   
+    .test1,.test2,.test3{
+        margin-bottom: 40px;  
+        width: 80vw; 
+    }
+    .avatar{
+        display: flex;
         .t1{
-            font-weight: bold;
-        }
             
         }
-     }
+    }
+    .sec4{
+        width: 80%;
+        margin: 20px auto;
+        padding: 20px 10px;
+        display: block;
+        
+        #head1{
+            font-size: 18px;
+            margin: 30px auto; 
+        }
+        #head2{
+            line-height: 1.5;
+            margin-bottom: 30px;
+        }
+        #email,.btn{
+            display:block ;
+            width: 90%;  
+            margin:20px auto;       
+        }
+        
+        
+    }
 
-.sec4{
-    width: 60% !important;
-    background-color:  hsl(217, 28%, 15%);
-    border-radius: 10px;
-    margin: 0px auto;
-    padding:30px 50px ;
-    position: relative;
-    top: 150px;
+    
     
 
 }
-
-.conatiner{
-    background-color: hsl(216, 53%, 9%);
-    text-align: left;
-    padding-top: 150px;
-    padding-bottom: 50px;
-    margin: 50px -5px;
-    #p{
-        width: 50%;
-    }
-    .cl-5{
-        display: inline-flex;
-        justify-content:left;
-    }
-}
-
-
-
-    
-
-
-
 
 
 
@@ -181,64 +216,15 @@ nav{
         display: flex;
         justify-content: space-between;
 }
-    .conatiner{
-        display: flex;
-        .cl-1{
-            margin-left: 50px;
-        }
-        .cl-2{
-            margin-left: -350px;
-            margin-right: 80px;
-        }
-        .cl-3{
-            margin-right: 80px;
-            width: 80px;
-        }
-        .cl-4{
-            margin-right: 80px;
-        }
-        .cl-5{
-            display: inline-flex;
-            
-        }
-    }
+.sec4{
+    width: 60% !important;
+    background-color:  hsl(217, 28%, 15%);
+    border-radius: 10px;
+    margin: 0px auto;
+    padding:30px 50px ;
+    position: relative;
+    top: 150px;
+    
 }
-
-
-/* for mobile screens */
-@media screen and (max-width: 768px) {
-    body{
-        margin: auto 20px;
-    }
-    .ill{
-        width: 80vw;
-    }
-    nav{
-        width: 100%;
-    }
-    .main{
-        #h1{
-            width: 100%;
-        }
-        #p{
-            width: 100%;
-        }
-    }
-    .main3{
-        margin-left: -30px;
-    }
-    .test1,.test2,.test3{
-        margin-bottom: 40px;  
-        width: 80vw; 
-    }
-    .conatiner{
-        width: 100vw;
-        .cl-5{
-            margin: 10px;
-            margin-left: auto;
-            margin-right: auto;
-    }
-  }
-
-
+    
 }
